# Maestro

./: .gitignore  PRD.md
.cursor/rules/: app_flow_document.mdc  backend_structure_document.mdc  cursor_project_rules.mdc  prd.mdc  project_progress.mdc  project_requirements_document.mdc
document/: app_flow.md  app_flow_cn.md  prd.md  prd_cn.md
documentation/: app_flow_document.mdc  frontend_guidelines_document.mdc  implementation_plan.mdc  project_requirements_document.md  tech_stack_document.mdc
documents/: backend_structure_document.md  tech_stack_document.md
maestro/: PROGRESS.md  README.md  package.json  vite.config.ts
maestro/src/: App.tsx  routes.tsx
maestro/src-tauri/: Cargo.toml  tauri.conf.json
maestro/src-tauri/capabilities/: main.json
maestro/src-tauri/src/: main.rs
maestro/src-tauri/src/tools/: bash.rs  computer.rs  edit.rs  error.rs  mod.rs
maestro/src-tauri/src/utils/: mod.rs
maestro/src/pages/: home-page.tsx  settings-page.tsx  welcome-page.tsx
maestro/src/services/: ai-service.ts  bash-service.ts  computer-service.ts  edit-service.ts  index.ts  types.ts
maestro_app/: README.md  middleware.ts  package-lock.json  package.json  project_progress.md  tailwind.config.js
maestro_app/app/: globals.css  layout.tsx  page.tsx
maestro_app/app/dashboard/: layout.tsx  page.tsx
maestro_app/components/chat/: chat-input.tsx
maestro_app/documents/: app_flow_document.md  project_requirements_document.md
maestro_app/lib/: auth-provider.tsx  supabase.ts  theme-provider.tsx  utils.ts
maestro_app/src-tauri/: tauri.conf.json
(+16 files in other folders)
