[package]
name = "maestro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "maestro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
screenshots = "0.8.5"
enigo = "0.1.3"
image = "0.24"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
# 系统信息
sysinfo = "0.29"
# 命令行工具
which = "4.4"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# 正则表达式
regex = "1.9"
# 随机数
rand = "0.8"
# 异步运行时
futures = "0.3"
# 序列化
bincode = "1.3"
# 压缩
flate2 = "1.0"
# 加密
ring = "0.17"
# UUID生成
uuid = { version = "1.4", features = ["v4"] }
# 全局单例
once_cell = "1.18"
# 剪贴板操作
clipboard = "0.5"
# 延迟初始化
lazy_static = "1.4"

